加入了圆形头像

--- a/Message-dialog.html
+++ b/Message-dialog.html
@@ -14,14 +14,13 @@
 				<p>
 				<div class="otherp-liu">
 					<div class="dialog-box shadow" style="margin: 30px 100px;">
-						<div class="word">
+						<div class="word-left-liu">
 							你觉得这个东西怎么样？
 						</div>
 						<div class="circle">
 							<div class="head-photo">
-								<!-- <svg class="icon" aria-hidden="true" style="font-size: 120px;color: var(--fColor);">
-									<use xlink:href="#icon-iconbell"></use>
-								</svg> -->
+								<img class = "id_img-liu" src="asserts/img/20130107210933_nGz3r.jpeg"
+								 alt="miemie rock" >
 							</div>
 						</div>
 					</div>
@@ -30,14 +29,13 @@
 				<p>
 				<div class="mine-liu" style="width: 100%;" align="right">
 					<div class="dialog-box shadow" style="margin: 30px 100px;background-color: #fff;" >
-						<div class="word" style="margin: 45px 190px 45px 50px;color: var(--fColor);" align="left">
+						<div class="word-right-liu" align="left">
 							我觉得不错
 						</div>
 						<div class="circle">
 							<div class="head-photo">
-							<!-- 	<svg class="icon" aria-hidden="true" style="font-size: 120px;color: var(--fColor);">
-									<use xlink:href="#icon-iconbell"></use>
-								</svg> -->
+								<img class = "id_img-liu" src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1565333434507&di=e547d8b3600d51794de1f175fc9efa9a&imgtype=0&src=http%3A%2F%2Fimg4.duitang.com%2Fuploads%2Fitem%2F201312%2F05%2F20131205172433_NsYGL.thumb.600_0.jpeg"
+								 alt="miemie rock" >
 							</div>
 						</div>
 					</div>
@@ -46,14 +44,13 @@
 				<p>
 				<div class="mine-liu" style="width: 100%;" align="right">
 					<div class="dialog-box shadow" style="margin: 30px 100px;background-color: #fff;" >
-						<div class="word " style="margin: 45px 190px 45px 50px;color: var(--fColor);" align="left">
+						<div class="word-right-liu " style="margin: 45px 190px 45px 50px;color: var(--fColor);" align="left">
 							我觉得不错我觉得不错我觉得不错我觉得不错我觉得不错我觉得不错我觉得不错我觉得不错我觉得不错我觉得不错我觉得不错
 						</div>
 						<div class="circle" >
 							<div class="head-photo">
-								<!-- <svg class="icon" aria-hidden="true" style="font-size: 120px;color: var(--fColor);">
-									<use xlink:href="#icon-iconbell"></use>
-								</svg> -->
+								<img class = "id_img-liu" src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1565333434507&di=e547d8b3600d51794de1f175fc9efa9a&imgtype=0&src=http%3A%2F%2Fimg4.duitang.com%2Fuploads%2Fitem%2F201312%2F05%2F20131205172433_NsYGL.thumb.600_0.jpeg"
+								 alt="miemie rock" >
 							</div>
 						</div>
 					</div>
@@ -62,13 +59,11 @@
 				<p>
 				<div class="mine-liu" style="width: 100%;" align="right">
 					<div class="dialog-box shadow" style="margin: 30px 100px;background-color: white;width: 50%;">
-						<img src="http://pic41.nipic.com/20140508/18609517_112216473140_2.jpg" style="width: 100%;z-index: -1;float: right;border-radius: 75px;"/>
+						<img src="http://b-ssl.duitang.com/uploads/item/201709/14/20170914120928_m3QLv.jpeg" style="width: 100%;z-index: -1;float: right;border-radius: 60px;"/>
 						<div class="circle" >
 							<div class="head-photo">
-								<!-- <svg class="icon" aria-hidden="true" style="font-size: 120px;color: var(--fColor);">
-									<use xlink:href="#icon-iconbell"></
-									use>
-								</svg> -->
+								<img class = "id_img-liu" src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1565333434507&di=e547d8b3600d51794de1f175fc9efa9a&imgtype=0&src=http%3A%2F%2Fimg4.duitang.com%2Fuploads%2Fitem%2F201312%2F05%2F20131205172433_NsYGL.thumb.600_0.jpeg"
+								 alt="miemie rock" >
 							</div>
 						</div>
 					</div>
