--- a/Message-inform.html
+++ b/Message-inform.html
@@ -10,36 +10,36 @@
 		<script type="text/javascript" src="http://at.alicdn.com/t/font_1306353_d5trwbvsb05.js"></script>
 		<div class="container-inform-liu">
 			<div class="dialog-box" >
-				<div class="word">
+				<div class="word-left-liu">
 					资金已转入平台账户，请您于25小时内将物品放入xx柜，开箱码xxxxxx，开箱码只能使用一次，一次之后失效。
 				</div>
 				<div class="circle">
 					<div class="head-photo">
-						<svg class="icon" aria-hidden="true" style="font-size: 120px;color: var(--fColor);">
+						<svg class="icon bell-liu" aria-hidden="true">
 							<use xlink:href="#icon-iconbell"></use>
 						</svg>
 					</div>
 				</div>
 			</div>
 			<div class="dialog-box" >
-				<div class="word">
+				<div class="word-left-liu">
 					资金已转入平台账户，请我想跳舞啊啊啊啊啊啊您于25小时内将物品放入xx柜，开箱码xxxxxx，开箱码只能使用一次，一次之后失效。
 				</div>
 				<div class="circle">
 					<div class="head-photo">
-						<svg class="icon" aria-hidden="true" style="font-size: 120px;color: var(--fColor);">
+						<svg class="icon bell-liu" aria-hidden="true">
 							<use xlink:href="#icon-iconbell"></use>
 						</svg>
 					</div>
 				</div>
 			</div>
 			<div class="dialog-box" >
-				<div class="word">
+				<div class="word-left-liu">
 					资金已转入平台账户，请您于25一次，一次之后失效。
 				</div>
 				<div class="circle">
-					<div class="head-photo">
-						<svg class="icon" aria-hidden="true" style="font-size: 120px;color: var(--fColor);">
+					<div class="head-photo" >
+						<svg class="icon bell-liu" aria-hidden="true" >
 							<use xlink:href="#icon-iconbell"></use>
 						</svg>
 					</div>
