1.增加index.html中底栏代码 2.删除文字信息只保留图标 3.发布按钮采用固定样式，优化界面比例布局

--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
 		<nav class="top-header sticky-top shadow">
 			<div class="container-fluid">
 				<div class="row">
-					<div class="col" style="padding: 0rem 0rem" align="center">
+					<div class="col" style="padding: 0vw 0vw" align="center">
 						<svg class="icon" aria-hidden="true" style="font-size: 11vw;margin-top:1vw;margin-bottom: 1vw;color: white;">
 							<use xlink:href="#icon-logo"></use>
 						</svg>
 					</div>
-					<div class="col-8" style="padding: 0rem;">
+					<div class="col-8" style="padding: 0vw;">
 						<object class="partnerLogo" data="asserts/plugins/SVG/wenzi.svg" type="image/svg+xml" style="margin-top: 1vw;"></object>
 					</div>
-					<div class="col" style="padding: 0rem 3vw">
+					<div class="col" style="padding: 0vw 3vw">
 						<div class="area-zhe index-zhe" style="margin-top: 1vw;font-size: 3vw;" align="center"><svg class="icon"
 							 aria-hidden="true" style="color: var(--fColor);">
 								<use xlink:href="#icon-weizhi"></use>
@@ -64,33 +64,33 @@
 			</a>
 		</div>
 		<div class="footer-bot">
-			<div class="container-fluid">
-				<div class="row">
-					<div class="col-2" style="height:100px" align="center" id="home" onclick="">
-						<svg class="icon" aria-hidden="true" style="font-size: 6rem;margin-top:1rem;">
+			<div class="container-fluid" >
+				<div class="row" >
+					<div class="col-2" style="height:8vw" align="center" id="home" onclick="">
+						<svg class="icon" aria-hidden="true" style="font-size: 6vw;margin-top: 1vw;color: black;">
 							<use xlink:href="#icon-zhuye"></use>
-						</svg><br /><a style="color: var(--fColor);font-size: 2rem;margin-bottom: 1rem">主页</a>
+						</svg><!-- <a style="color: var(--fColor);font-size: 2vw;margin-bottom: 1vw">主页</a> -->
 					</div>
-					<div class="col-2" style="height:100px" align="center">
-						<svg class="icon" aria-hidden="true" style="font-size: 6rem;margin-top:1rem;">
+					<div class="col-2" style="height:8vw" align="center" id="search" onclick="">
+						<svg class="icon" aria-hidden="true" style="font-size: 6vw;margin-top:1vw;">
 							<use xlink:href="#icon-sousuo"></use>
-						</svg><br /><a style="color: var(--fColor);font-size: 2rem;margin-bottom: 1rem">搜索</a>
+						</svg><!-- <a style="color: var(--fColor);font-size: 2vw;margin-bottom: 1vw">搜索</a> -->
 					</div>
-					<div class="col-4" style="height:100px;" align="center">
-						<svg class="icon" aria-hidden="true" style="font-size: 12rem;">
+					<div class="col-4"></div>
+					<div style="height:8vw;position: fixed;width: 100%; bottom:4vw;justify-content: center;" align="center" id="publish" onclick="">
+						<svg class="icon" aria-hidden="true" style="font-size: 12vw;">
 							<use xlink:href="#icon-xinzeng"></use>
-						</svg><br /><a style="color:var(--fColor);font-size: 2rem;margin-bottom: 1rem">发布</a>
+						</svg>
 					</div>
-					<div class="col-2" style="height:100px" align="center">
-						<div style="margin-bottom: 6.25rem;">
-						<svg class="icon" aria-hidden="true" style="font-size: 6rem;margin-top:1rem;">
+					<div class="col-2" style="height:8vw" align="center" id="message" onclick="">
+						<svg class="icon" aria-hidden="true" style="font-size: 6vw;margin-top:1vw;">
 							<use xlink:href="#icon-xiaoxi"></use>
-						</svg><br /><a style="color: var(--fColor);font-size: 2rem;margin-bottom: 1rem">消息</a></div>
+						</svg><!-- <a style="color: var(--fColor);font-size: 2vw;margin-bottom: 1vw">消息</a> -->
 					</div>
-					<div class="col-2" style="height:100px" align="center">
-						<svg class="icon" aria-hidden="true" style="font-size: 6rem;margin-top:1rem;">
+					<div class="col-2" style="height:8vw" align="center" id="mine" onclick="">
+						<svg class="icon" aria-hidden="true" style="font-size: 6vw;margin-top:1vw;">
 							<use xlink:href="#icon-wode"></use>
-						</svg><br /><a style="color: var(--fColor);font-size: 2rem;margin-bottom: 1rem">我的</a>
+						</svg><!-- <a style="color: var(--fColor);font-size: 2vw;margin-bottom: 1vw">我的</a> -->
 					</div>
 				</div>
 			</div>
