--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<title>悠悦跳蚤市场</title>
 	</head>
 	<body>
+		<!-- 固定顶栏 -->
 		<nav class="top-header sticky-top shadow">
 			<div class="container-fluid">
 				<div class="row">
@@ -63,6 +64,7 @@
 
 			</a>
 		</div>
+		<!-- 固定底栏 -->
 		<div class="footer-bot">
 			<div class="container-fluid" >
 				<div class="row" >
@@ -95,6 +97,26 @@
 				</div>
 			</div>
 		</div>
+		<!-- 浮动说明 -->
+		<div class="father" style="z-index: 9999;" id="instruction-first">
+			<div style="width: 50%;height: 50%;background: white;" class="son float-instruction shadow">
+				<div style="width: 100%;height: 0 auto; background-color: var(--fColor);">
+					<div class="container-fluid" style="padding: 0rem;">
+						<div class="row" style="padding: 0rem;margin: 0;">
+							<div class="col-8" align="center" style="padding:0rem;color: white;font-weight: bold;font-size: 4vw;" >
+							这里替换文本
+							</div>
+							<div class="col-4" align="right" style="padding-right: 3vw">
+								<svg class="icon" aria-hidden="true" style="font-size: 6vw;color: white;" onclick="close_instruction()">
+									<use xlink:href="#icon-guanbi"></use>
+								</svg>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		
 		<script src="http://at.alicdn.com/t/font_1306353_relcrq316p.js" type="text/javascript"></script>
 	</body>
 </html>
