--- a/Message-dialog.html
+++ b/Message-dialog.html
@@ -12,66 +12,89 @@
 		<div>
 			<div class=" container-dialog-liu">
 				<p>
-				<div class="otherp-liu">
-					<div class="dialog-box shadow" style="margin: 30px 100px;">
-						<div class="word-left-liu">
-							你觉得这个东西怎么样？
-						</div>
-						<div class="circle">
-							<div class="head-photo">
-								<img class = "id_img-liu" src="asserts/img/20130107210933_nGz3r.jpeg"
-								 alt="miemie rock" >
+					<div class="otherp-liu">
+						<div class="dialog-box shadow" style="margin: 30px 100px;">
+							<div class="word-left-liu">
+								你觉得这个东西怎么样？
+							</div>
+							<div class="circle">
+								<div class="head-photo">
+									<img class="id_img-liu" src="asserts/img/20130107210933_nGz3r.jpeg" alt="miemie rock">
+								</div>
 							</div>
 						</div>
 					</div>
-				</div>
 				</p>
 				<p>
-				<div class="mine-liu" style="width: 100%;" align="right">
-					<div class="dialog-box shadow" style="margin: 30px 100px;background-color: #fff;" >
-						<div class="word-right-liu" align="left">
-							我觉得不错
-						</div>
-						<div class="circle">
-							<div class="head-photo">
-								<img class = "id_img-liu" src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1565333434507&di=e547d8b3600d51794de1f175fc9efa9a&imgtype=0&src=http%3A%2F%2Fimg4.duitang.com%2Fuploads%2Fitem%2F201312%2F05%2F20131205172433_NsYGL.thumb.600_0.jpeg"
-								 alt="miemie rock" >
+					<div class="mine-liu" style="width: 100%;" align="right">
+						<div class="dialog-box shadow" style="margin: 30px 100px;background-color: #fff;">
+							<div class="word-right-liu" align="left">
+								我觉得不错
+							</div>
+							<div class="circle">
+								<div class="head-photo">
+									<img class="id_img-liu" src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1565333434507&di=e547d8b3600d51794de1f175fc9efa9a&imgtype=0&src=http%3A%2F%2Fimg4.duitang.com%2Fuploads%2Fitem%2F201312%2F05%2F20131205172433_NsYGL.thumb.600_0.jpeg"
+									 alt="miemie rock">
+								</div>
 							</div>
 						</div>
 					</div>
-				</div>
 				</p>
 				<p>
-				<div class="mine-liu" style="width: 100%;" align="right">
-					<div class="dialog-box shadow" style="margin: 30px 100px;background-color: #fff;" >
-						<div class="word-right-liu " style="margin: 45px 190px 45px 50px;color: var(--fColor);" align="left">
-							我觉得不错我觉得不错我觉得不错我觉得不错我觉得不错我觉得不错我觉得不错我觉得不错我觉得不错我觉得不错我觉得不错
-						</div>
-						<div class="circle" >
-							<div class="head-photo">
-								<img class = "id_img-liu" src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1565333434507&di=e547d8b3600d51794de1f175fc9efa9a&imgtype=0&src=http%3A%2F%2Fimg4.duitang.com%2Fuploads%2Fitem%2F201312%2F05%2F20131205172433_NsYGL.thumb.600_0.jpeg"
-								 alt="miemie rock" >
+					<div class="mine-liu" style="width: 100%;" align="right">
+						<div class="dialog-box shadow" style="margin: 30px 100px;background-color: #fff;">
+							<div class="word-right-liu " style="margin: 45px 190px 45px 50px;color: var(--fColor);" align="left">
+								我觉得不错我觉得不错我觉得不错我觉得不错我觉得不错我觉得不错我觉得不错我觉得不错我觉得不错我觉得不错
+							</div>
+							<div class="circle">
+								<div class="head-photo">
+									<img class="id_img-liu" src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1565333434507&di=e547d8b3600d51794de1f175fc9efa9a&imgtype=0&src=http%3A%2F%2Fimg4.duitang.com%2Fuploads%2Fitem%2F201312%2F05%2F20131205172433_NsYGL.thumb.600_0.jpeg"
+									 alt="miemie rock">
+								</div>
 							</div>
 						</div>
 					</div>
-				</div>
 				</p>
 				<p>
-				<div class="mine-liu" style="width: 100%;" align="right">
-					<div class="dialog-box shadow" style="margin: 30px 100px;background-color: white;width: 50%;">
-						<img src="http://b-ssl.duitang.com/uploads/item/201709/14/20170914120928_m3QLv.jpeg" style="width: 100%;z-index: -1;float: right;border-radius: 60px;"/>
-						<div class="circle" >
-							<div class="head-photo">
-								<img class = "id_img-liu" src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1565333434507&di=e547d8b3600d51794de1f175fc9efa9a&imgtype=0&src=http%3A%2F%2Fimg4.duitang.com%2Fuploads%2Fitem%2F201312%2F05%2F20131205172433_NsYGL.thumb.600_0.jpeg"
-								 alt="miemie rock" >
+					<div class="mine-liu" style="width: 100%;" align="right">
+						<div class="dialog-box shadow" style="margin: 30px 100px;background-color: white;width: 50%;">
+							<img src="http://b-ssl.duitang.com/uploads/item/201709/14/20170914120928_m3QLv.jpeg" style="width: 100%;z-index: -1;float: right;border-radius: 60px;" />
+							<div class="circle">
+								<div class="head-photo">
+									<img class="id_img-liu" src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1565333434507&di=e547d8b3600d51794de1f175fc9efa9a&imgtype=0&src=http%3A%2F%2Fimg4.duitang.com%2Fuploads%2Fitem%2F201312%2F05%2F20131205172433_NsYGL.thumb.600_0.jpeg"
+									 alt="miemie rock">
+								</div>
 							</div>
 						</div>
 					</div>
-				</div>
+				</p>
+				<p>
+					<div class="mine-liu" style="width: 100%;" align="right">
+						<div class="dialog-box shadow" style="margin: 30px 100px;background-color: #fff;">
+							<div class="word-right-liu" align="left">
+								[语音] 59s
+							</div>
+							<div class="circle">
+								<div class="head-photo">
+									<img class="id_img-liu" src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1565333434507&di=e547d8b3600d51794de1f175fc9efa9a&imgtype=0&src=http%3A%2F%2Fimg4.duitang.com%2Fuploads%2Fitem%2F201312%2F05%2F20131205172433_NsYGL.thumb.600_0.jpeg"
+									 alt="miemie rock">
+								</div>
+							</div>
+						</div>
+					</div>
 				</p>
 			</div>
+			
+			<div class="bottom-liu shadow">
+					<div class="input-liu shadow">
+					
+					</div>
+			</div>
+			
+			<!-- <svg class="icon" aria-hidden="true">
+				<use xlink:href="#icon-yuyin"></use>
+			</svg> -->
 		</div>
-	
-		
+
 	</body>
 </html>
