--- a/Message-index.html
+++ b/Message-index.html
@@ -5,6 +5,14 @@
 		<meta charset="utf-8">
 		<title>消息总界面</title>
 		<link rel="stylesheet" type="text/css" href="asserts/CSS/yespaceCss.css">
+		<!-- CSS库 -->
+		<!-- Bootstrap -->
+		<link rel="stylesheet" href="asserts/plugins/bootstrap/css/bootstrap.min.css" />
+		<link rel="stylesheet" href="asserts/CSS/yespaceCss.css" />
+		<!-- JS库 -->
+		<script src="asserts/js/Yespacejs.js" type="text/javascript"></script>
+		<script src="asserts/js/jquery.min.js" type="text/javascript"></script>
+		<script src="asserts/plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
 
 	</head>
 	<body>
@@ -36,6 +44,38 @@
 						<span>[语音]</span>
 					</li>
 				</ul>
+			</div>
+		</div>
+		<div class="footer-bot">
+			<div class="container-fluid" >
+				<div class="row" >
+					<div class="col-2" style="height:8vw" align="center" id="home" onclick="">
+						<svg class="icon" aria-hidden="true" style="font-size: 6vw;margin-top: 1vw;">
+							<use xlink:href="#icon-zhuye"></use>
+						</svg><!-- <a style="color: var(--fColor);font-size: 2vw;margin-bottom: 1vw">主页</a> -->
+					</div>
+					<div class="col-2" style="height:8vw" align="center" id="search" onclick="">
+						<svg class="icon" aria-hidden="true" style="font-size: 6vw;margin-top:1vw;">
+							<use xlink:href="#icon-sousuo"></use>
+						</svg><!-- <a style="color: var(--fColor);font-size: 2vw;margin-bottom: 1vw">搜索</a> -->
+					</div>
+					<div class="col-4"></div>
+					<div style="height:8vw;position: fixed;width: 100%; bottom:4vw;justify-content: center;" align="center" id="publish" onclick="">
+						<svg class="icon" aria-hidden="true" style="font-size: 12vw;">
+							<use xlink:href="#icon-xinzeng"></use>
+						</svg>
+					</div>
+					<div class="col-2" style="height:8vw" align="center" id="message" onclick="">
+						<svg class="icon" aria-hidden="true" style="font-size: 6vw;margin-top:1vw;color: black;">
+							<use xlink:href="#icon-xiaoxi"></use>
+						</svg><!-- <a style="color: var(--fColor);font-size: 2vw;margin-bottom: 1vw">消息</a> -->
+					</div>
+					<div class="col-2" style="height:8vw" align="center" id="mine" onclick="">
+						<svg class="icon" aria-hidden="true" style="font-size: 6vw;margin-top:1vw;">
+							<use xlink:href="#icon-wode"></use>
+						</svg><!-- <a style="color: var(--fColor);font-size: 2vw;margin-bottom: 1vw">我的</a> -->
+					</div>
+				</div>
 			</div>
 		</div>
 		<script type="text/javascript" src="http://at.alicdn.com/t/font_1306353_d5trwbvsb05.js"></script>
