--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- 主页 -->
 <!DOCTYPE html>
 <html lang="en">
 	<head>
@@ -39,7 +40,7 @@
 				</div>
 			</div>
 		</nav>
-		<div>
+		<div class="container-bar-index">
 			<a style="font-size:3vw;">
 				尊敬的信息科学与工程学院：
 				您好！
@@ -99,7 +100,7 @@
 		</div>
 		<!-- 浮动说明 -->
 		<div class="father" style="z-index: 9999;" id="instruction-first">
-			<div style="width: 50%;height: 50%;background: white;" class="son float-instruction shadow">
+			<div style="width: 50%;height: 50%;background: white;" class="son float-instruction shadow-irreguler">
 				<div style="width: 100%;height: 0 auto; background-color: var(--fColor);">
 					<div class="container-fluid" style="padding: 0rem;">
 						<div class="row" style="padding: 0rem;margin: 0;">
@@ -113,6 +114,9 @@
 							</div>
 						</div>
 					</div>
+				</div>
+				<div style="height: 90%;width: 90%;margin-top: 7vw;" class="son">
+					这里是提示内容
 				</div>
 			</div>
 		</div>
