--- a/Message-dialog.html
+++ b/Message-dialog.html
@@ -85,15 +85,19 @@
 				</p>
 			</div>
 			
-			<div class="bottom-liu shadow">
-					<div class="input-liu shadow">
-					
+			<div class="bottom-liu shadow-irreguler">
+					<div class="input-liu shadow-irreguler">
 					</div>
+					<svg class="icon" aria-hidden="true"
+					      style="font-size: 100px;">
+						<use xlink:href="#icon-xinzeng"></use>
+					</svg>
+					
 			</div>
 			
-			<!-- <svg class="icon" aria-hidden="true">
+			<svg class="icon" aria-hidden="true">
 				<use xlink:href="#icon-yuyin"></use>
-			</svg> -->
+			</svg>
 		</div>
 
 	</body>
