--- a/Message-index.html
+++ b/Message-index.html
@@ -20,7 +20,7 @@
 			<div>
 				<div class="list-header" style="background-color:
 				 #4C51B11E;border: 2px solid #4C51B11E;">
-					<svg class="icon" aria-hidden="true" style="font-size: 100px;color: var(--fColor);">
+					<svg class="icon" aria-hidden="true" style="font-size: 110px;">
 						<use xlink:href="#icon-iconbell"></use>
 					</svg>
 					<span>
