--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<script src="asserts/js/Yespacejs.js" type="text/javascript"></script>
 		<script src="asserts/js/jquery.min.js" type="text/javascript"></script>
 		<script src="asserts/plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+		<script src="http://at.alicdn.com/t/font_1306353_relcrq316p.js" type="text/javascript"></script>
 		<title>悠悦跳蚤市场</title>
 	</head>
 	<body>
@@ -69,29 +70,29 @@
 		<div class="footer-bot">
 			<div class="container-fluid" >
 				<div class="row" >
-					<div class="col-2" style="height:8vw" align="center" id="home" onclick="">
-						<svg class="icon" aria-hidden="true" style="font-size: 6vw;margin-top: 1vw;color: black;">
-							<use xlink:href="#icon-zhuye"></use>
+					<div class="col-2"  align="center" id="home" onclick="">
+						<svg class="icon" aria-hidden="true" style="font-size: 9vw;margin-top: 2vw;color: black;">							
+						<use xlink:href="#icon-zhuye"></use>
 						</svg><!-- <a style="color: var(--fColor);font-size: 2vw;margin-bottom: 1vw">主页</a> -->
 					</div>
-					<div class="col-2" style="height:8vw" align="center" id="search" onclick="">
-						<svg class="icon" aria-hidden="true" style="font-size: 6vw;margin-top:1vw;">
+					<div class="col-2" align="center" id="search" onclick="">
+						<svg class="icon" aria-hidden="true" style="font-size: 9vw;margin-top:2vw;">
 							<use xlink:href="#icon-sousuo"></use>
 						</svg><!-- <a style="color: var(--fColor);font-size: 2vw;margin-bottom: 1vw">搜索</a> -->
 					</div>
 					<div class="col-4"></div>
-					<div style="height:8vw;position: fixed;width: 100%; bottom:4vw;justify-content: center;" align="center" id="publish" onclick="">
-						<svg class="icon" aria-hidden="true" style="font-size: 12vw;">
+					<div style="height:12vw;position: fixed;width: 100%; bottom:6vw;justify-content: center;" align="center" id="publish" onclick="">
+						<svg class="icon" aria-hidden="true" style="font-size: 18vw;">
 							<use xlink:href="#icon-xinzeng"></use>
 						</svg>
 					</div>
-					<div class="col-2" style="height:8vw" align="center" id="message" onclick="">
-						<svg class="icon" aria-hidden="true" style="font-size: 6vw;margin-top:1vw;">
+					<div class="col-2"  align="center" id="message" onclick="">
+						<svg class="icon" aria-hidden="true" style="font-size: 9vw;margin-top:2vw;">
 							<use xlink:href="#icon-xiaoxi"></use>
 						</svg><!-- <a style="color: var(--fColor);font-size: 2vw;margin-bottom: 1vw">消息</a> -->
 					</div>
-					<div class="col-2" style="height:8vw" align="center" id="mine" onclick="">
-						<svg class="icon" aria-hidden="true" style="font-size: 6vw;margin-top:1vw;">
+					<div class="col-2" align="center" id="mine" onclick="">
+						<svg class="icon" aria-hidden="true" style="font-size: 9vw;margin-top:2vw;">
 							<use xlink:href="#icon-wode"></use>
 						</svg><!-- <a style="color: var(--fColor);font-size: 2vw;margin-bottom: 1vw">我的</a> -->
 					</div>
@@ -99,7 +100,7 @@
 			</div>
 		</div>
 		<!-- 浮动说明 -->
-		<div class="father" style="z-index: 9999;" id="instruction-first">
+		<div class="father" style="z-index: 9999;" id="instruction-first" >
 			<div style="width: 50%;height: 50%;background: white;" class="son float-instruction shadow-irreguler">
 				<div style="width: 100%;height: 0 auto; background-color: var(--fColor);">
 					<div class="container-fluid" style="padding: 0rem;">
@@ -121,6 +122,6 @@
 			</div>
 		</div>
 		
-		<script src="http://at.alicdn.com/t/font_1306353_relcrq316p.js" type="text/javascript"></script>
+		
 	</body>
 </html>
