--- a/Message-index.html
+++ b/Message-index.html
@@ -3,7 +3,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>消息总界面</title>
+		<title>Message-index消息总界面</title>
 		<link rel="stylesheet" type="text/css" href="asserts/CSS/yespaceCss.css">
 		<!-- CSS库 -->
 		<!-- Bootstrap -->
@@ -16,11 +16,10 @@
 
 	</head>
 	<body>
-		<div class="container-liu">
+		<div class="container-index-liu">
 			<div>
-				<div class="list-header" style="background-color:
-				 #4C51B11E;border: 2px solid #4C51B11E;">
-					<svg class="icon" aria-hidden="true" style="font-size: 110px;">
+				<div class="list-header" style="background-color:#4C51B11E;border: 0px solid #4C51B11E;">
+					<svg class="icon" aria-hidden="true" style="font-size: 90px;margin: 8px 30px;">
 						<use xlink:href="#icon-iconbell"></use>
 					</svg>
 					<span>
@@ -29,18 +28,33 @@
 				</div>
 				<ul class="ul-liu">
 					<li class="list-item">
+						<div class="circle" style="float: left;width: 90px;height: 90px;margin: 8px 30px;background-color:rgba(0,0,0,0);">
+							<img class="id_img-liu" src="asserts/img/20130107210933_nGz3r.jpeg" alt="miemie rock">
+						</div>
 						<span>你觉得这个怎么样</span>
 					</li>
 					<li class="list-item">
+						<div class="circle" style="float: left;width: 90px;height: 90px;margin: 8px 30px;background-color:rgba(0,0,0,0);">
+							<img class="id_img-liu" src="asserts/img/20130107210933_nGz3r.jpeg" alt="miemie rock">
+						</div>
 						<span>你喜欢就下单吧</span>
 					</li>
 					<li class="list-item">
+						<div class="circle" style="float: left;width: 90px;height: 90px;margin: 8px 30px;background-color:rgba(0,0,0,0);">
+							<img class="id_img-liu" src="asserts/img/20130107210933_nGz3r.jpeg" alt="miemie rock">
+						</div>
 						<span>明天行吗</span>
 					</li>
 					<li class="list-item">
+						<div class="circle" style="float: left;width: 90px;height: 90px;margin: 8px 30px;background-color:rgba(0,0,0,0);">
+							<img class="id_img-liu" src="asserts/img/20130107210933_nGz3r.jpeg" alt="miemie rock">
+						</div>
 						<span>[图片]</span>
 					</li>
 					<li class="list-item">
+						<div class="circle" style="float: left;width: 90px;height: 90px;margin: 8px 30px;background-color:rgba(0,0,0,0);">
+							<img class="id_img-liu" src="asserts/img/20130107210933_nGz3r.jpeg" alt="miemie rock">
+						</div>
 						<span>[语音]</span>
 					</li>
 				</ul>
