--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 							这里替换文本
 							</div>
 							<div class="col-4" align="right" style="padding-right: 3vw">
-								<svg class="icon" aria-hidden="true" style="font-size: 6vw;color: white;" onclick="close_instruction()">
+								<svg class="icon" aria-hidden="true" style="font-size: 6vw;color: white;" onclick="close_instruction('instruction-first')">
 									<use xlink:href="#icon-guanbi"></use>
 								</svg>
 							</div>
