--- a/searchdn.html
+++ b/searchdn.html
@@ -14,7 +14,7 @@
 			<div class="container-fluid">
 				<div class="row">
 					<div class="col-8"><input type="text" style="padding-left:5vw; font-size:5vw;margin: 1vw 0rem;height: 11vw;width: 100%;"
-						 placeholder="您想找点啥呢"></div>
+						 placeholder="电脑"></div>
 					<div class="col-2"><svg class="icon" aria-hidden="true" style="color:var(--fColor);margin-top:1vw;margin-bottom: 1vw;font-size: 11vw;">
 							<use xlink:href="#icon-sousuo"></use>
 						</svg></div>
