--- a/Add.html
+++ b/Add.html
@@ -10,8 +10,8 @@
 		<link rel="stylesheet" href="asserts/plugins/bootstrap/css/bootstrap.min.css" />
 		<link rel="stylesheet" href="asserts/CSS/yespaceCss.css" />
 		<!-- JS库 -->
+				<script src="asserts/js/jquery.min.js" type="text/javascript"></script>
 		<script src="asserts/js/Yespacejs.js" type="text/javascript"></script>
-		<script src="asserts/js/jquery.min.js" type="text/javascript"></script>
 		<script src="asserts/plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
 		<script src="http://at.alicdn.com/t/font_1306353_relcrq316p.js" type="text/javascript"></script>
 		<title>发布商品</title>
@@ -40,7 +40,7 @@
 			<a style="color: var(--fColor);font-weight: bold;font-size: 4vw;">请选择您本次支持的交易方式：</a>
 			<div class="container-fluid" id="pay-way" style="width: 100%; background-color: lightyellow;height: 10000px;" onload="pay_way()">
 				
-				<img src="asserts/img/spinner.svg" height="1%" width="100%"/>
+				<img class="svg progress-zhe" src="asserts/img/spinner.svg"/>
 			
 			</div>
 			<div></div>
@@ -49,7 +49,7 @@
 			<div></div>
 		</div>
 		<div class="father" style="z-index: 9999;display: none;" id="instruction-second" >
-			<div style="width: 50%;height: 50%;background: white;" class="son float-instruction shadow-irreguler">
+			<div style="background: white;" class="son float-instruction shadow-irreguler">
 				<div style="width: 100%;height: 0 auto; background-color: var(--fColor);">
 					<div class="container-fluid" style="padding: 0rem;">
 						<div class="row" style="padding: 0rem;margin: 0;">
@@ -64,7 +64,7 @@
 						</div>
 					</div>
 				</div>
-				<div style="height: 90%;width: 90%;margin-top: 7vw;color: var(--fColor);font-size: 3vw;font-weight: bold;" class="son" >
+				<div style="height: 70%;width: 90%;margin-top: 6vw;" class="son box6 tip-css"  >
 					您当前区域暂未部署悠悦易存产品或由于您未选择您的高校系统无法判断您的区域是否部署悠悦易存产品，您暂时无法使用平台交易。
 				</div>
 			</div>
