--- a/Message-dialog.html
+++ b/Message-dialog.html
@@ -5,6 +5,14 @@
 		<meta charset="utf-8">
 		<title>Message-dialog对话框</title>
 		<link rel="stylesheet" type="text/css" href="asserts/CSS/yespaceCss.css">
+		<!-- CSS库 -->
+		<!-- Bootstrap -->
+		<link rel="stylesheet" href="asserts/plugins/bootstrap/css/bootstrap.min.css" />
+		<link rel="stylesheet" href="asserts/CSS/yespaceCss.css" />
+		<!-- JS库 -->
+		<script src="asserts/js/Yespacejs.js" type="text/javascript"></script>
+		<script src="asserts/js/jquery.min.js" type="text/javascript"></script>
+		<script src="asserts/plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
 
 	</head>
 	<body>
@@ -86,13 +94,20 @@
 			</div>
 
 			<div class="bottom-liu shadow-irreguler">
-				<svg class="icon" aria-hidden="true" style="font-size: 13vw;position: absolute;left: 5%;">
-					<use xlink:href="#icon-tupian"></use></svg>
-				<svg class="icon" aria-hidden="true" style="font-size: 10vw;position: absolute;left: 20%; top: 10px;">
-					<use xlink:href="#icon-yuyin"></use></svg>
+				<div class="mark-liu">
+					<svg class="icon" aria-hidden="true" style="font-size: 13vw;position: absolute;left: 5%;">
+						<use xlink:href="#icon-tupian"></use></svg>
+					<svg class="icon" aria-hidden="true" style="font-size: 10vw;position: absolute;left: 20%; top: 5%;" onmousedown="myFunction(vliu,'red')" onmouseup="myFunction(vliu,'green')">
+						<use xlink:href="#icon-yuyin"></use></svg>
+					<div style="display: ;">
+						<img onmousedown="myFunction(vliu,'red')" onmouseup="myFunction(vliu,'green')" class="voice-liu" src="asserts/img/spinner.svg" style="height: 40%;position: absolute;left: 32%;top: 5%;">
+					</div>
+				</div>
 				<div class="input-liu shadow-irreguler"></div>
-				<svg class="icon" aria-hidden="true" style="font-size: 10vw;position: absolute;right: -2%;bottom: -10px;transform: translate(-50%, -50%);">
-					<use xlink:href="#icon-xinzeng"></use></svg>
+				<div id="xinzeng-liu" onclick="show_liu()">
+					<svg class="icon" aria-hidden="true" style="font-size: 10vw;position: absolute;right: -2%;bottom: -10px;transform: translate(-50%, -50%);">
+						<use xlink:href="#icon-xinzeng"></use></svg>
+				</div>
 			</div>
 			
 		</div>
