--- a/Message-dialog.html
+++ b/Message-dialog.html
@@ -94,23 +94,37 @@
 			</div>
 
 			<div class="bottom-liu shadow-irreguler">
-				<div class="mark-liu">
-					<svg class="icon" aria-hidden="true" style="font-size: 13vw;position: absolute;left: 5%;">
-						<use xlink:href="#icon-tupian"></use></svg>
-					<svg class="icon" aria-hidden="true" style="font-size: 10vw;position: absolute;left: 20%; top: 5%;" onmousedown="myFunction(vliu,'red')" onmouseup="myFunction(vliu,'green')">
-						<use xlink:href="#icon-yuyin"></use></svg>
-					<div style="display: ;">
-						<img onmousedown="myFunction(vliu,'red')" onmouseup="myFunction(vliu,'green')" class="voice-liu" src="asserts/img/spinner.svg" style="height: 40%;position: absolute;left: 32%;top: 5%;">
+				<div class="container-fluid">
+					<div class="row mark-liu" style="display: none;">
+						<div class="col-2"><svg class="icon" id="tupian" aria-hidden="true" style="font-size: 13vw;">
+								<use xlink:href="#icon-tupian"></use>
+							</svg></div>
+						<div class="col-2" style="margin-top: 1vw;"><svg class="icon" id="yuyin" aria-hidden="true" style="font-size: 10vw;color: var(--sColor);"
+							 onmousedown="myFunction(vliu,'red')" onmouseup="myFunction(vliu,'green')">
+								<use xlink:href="#icon-yuyin"></use>
+							</svg></div>
+						<div class="col-2">
+							<div style="display: none;">
+								<img onmousedown="myFunction(vliu,'red')" onmouseup="myFunction(vliu,'green')" class="voice-liu" src="asserts/img/spinner.svg"
+								 style="height: 8vw;margin-top: 2vw;">
+							</div>
+						</div>
+						<div class="col-6"></div>
+					</div>
+					<div class="row">
+						<div class="col-10" align="center" style="padding: 1vw;">
+							<div class="input-liu shadow-irreguler"></div>
+						</div>
+						<div class="col-2" align="center">
+							<div onclick="show_liu()">
+								<svg id="xinzeng-liu" class="icon" aria-hidden="true" style="font-size: 10vw;color: var(--sColor);">
+									<use xlink:href="#icon-xinzeng"></use>
+								</svg>
+							</div>
+						</div>
 					</div>
 				</div>
-				<div class="input-liu shadow-irreguler"></div>
-				<div id="xinzeng-liu" onclick="show_liu()">
-					<svg class="icon" aria-hidden="true" style="font-size: 10vw;position: absolute;right: -2%;bottom: -10px;transform: translate(-50%, -50%);">
-						<use xlink:href="#icon-xinzeng"></use></svg>
-				</div>
 			</div>
-			
 		</div>
-
 	</body>
 </html>
