--- a/Add.html
+++ b/Add.html
@@ -38,7 +38,7 @@
 		<div style="padding-left: 5vw;padding-right: 5vw;padding-top: 5vw;">
 			<!-- 交易方式 -->
 			<a style="color: var(--fColor);font-weight: bold;font-size: 4vw;">请选择您本次支持的交易方式：</a>
-			<div class="container-fluid" id="pay-way" style="width: 100%; background-color: lightyellow;margin-top: 10000vw;" onload="pay_way()">
+			<div class="container-fluid" id="pay-way" style="width: 100%; background-color: lightyellow;margin-top: 1vw;height: 100vw;" onload="pay_way()">
 				
 				<img class="svg progress-zhe" src="asserts/img/spinner.svg"/>
 			
