--- a/Add.html
+++ b/Add.html
@@ -10,7 +10,7 @@
 		<link rel="stylesheet" href="asserts/plugins/bootstrap/css/bootstrap.min.css" />
 		<link rel="stylesheet" href="asserts/CSS/yespaceCss.css" />
 		<!-- JS库 -->
-				<script src="asserts/js/jquery.min.js" type="text/javascript"></script>
+		<script src="asserts/js/jquery.min.js" type="text/javascript"></script>
 		<script src="asserts/js/Yespacejs.js" type="text/javascript"></script>
 		<script src="asserts/plugins/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
 		<script src="http://at.alicdn.com/t/font_1306353_relcrq316p.js" type="text/javascript"></script>
@@ -18,7 +18,7 @@
 	</head>
 	<body>
 		<!-- 发布页顶栏 -->
-		<nav class="top-header sticky-top shadow" >
+		<nav class="top-header sticky-top shadow">
 			<div class="container-fluid">
 				<div class="row">
 					<div class="col-2" align="center" style="vertical-align:bottom;">
@@ -26,8 +26,9 @@
 							<use xlink:href="#icon-fanhui"></use>
 						</svg>
 					</div>
-					<div class="col-8" style="height: 0 auto;color: white;font-size: 6vw;font-weight: bold;justify-content: center;" align="center">
-							发布物品
+					<div class="col-8" style="height: 0 auto;color: white;font-size: 6vw;font-weight: bold;justify-content: center;"
+					 align="center">
+						发布物品
 					</div>
 					<div class="col-2"></div>
 				</div>
@@ -38,36 +39,83 @@
 		<div style="padding-left: 5vw;padding-right: 5vw;padding-top: 5vw;">
 			<!-- 交易方式 -->
 			<a style="color: var(--fColor);font-weight: bold;font-size: 4vw;">请选择您本次支持的交易方式：</a>
-			<div class="container-fluid" id="pay-way" style="width: 100%; background-color: lightyellow;margin-top: 1vw;height: 100vw;" onload="pay_way()">
-				
-				<img class="svg progress-zhe" src="asserts/img/spinner.svg"/>
-			
-			</div>
-			<div></div>
-			<div></div>
-			<div></div>
-			<div></div>
-		</div>
-		<div class="father" style="z-index: 9999;display: none;" id="instruction-second" >
-			<div style="background: white;" class="son float-instruction shadow-irreguler">
-				<div style="width: 100%;height: 0 auto; background-color: var(--fColor);">
-					<div class="container-fluid" style="padding: 0rem;">
-						<div class="row" style="padding: 0rem;margin: 0;">
-							<div class="col-10" align="center" style="padding:0rem;color: white;font-weight: bold;font-size: 4vw;" >
-							为什么无法选择？
-							</div>
-							<div class="col-2" align="right" style="padding-right: 3vw">
-								<svg class="icon" aria-hidden="true" style="font-size: 6vw;color: white;" onclick="close_instruction('instruction-second')">
-									<use xlink:href="#icon-guanbi"></use>
-								</svg>
-							</div>
+			<div class="container-fluid" style="width: 100%;border: #000000 solid 2px; margin-top: 1vw;height: 100vw;" onload="pay_way()">
+				<div id="pay-way"><img class="svg progress-zhe" src="asserts/img/spinner.svg" /></div>
+				<div class="row" style="margin-top: 3vw;">
+					<div class="col-4">
+						<div class="index-zhe shadow" style="font-size: 3vw;" align="center"><svg class="icon" aria-hidden="true" style="color: var(--fColor);">
+								<use xlink:href="#icon-weizhi"></use>
+							</svg><a style="color: var(--fColor);">日照</a></div>
+					</div>
+					<div class="col-8">
+						<div>
+							<input type="text" class="index-zhe shadow" style="padding-left: 2vw;margin: 0;font-size: 3vw;border-style: none;height: auto;"
+							 name="position" id="position" placeholder="在此填写您的位置(可选)" />
 						</div>
 					</div>
 				</div>
-				<div style="height: 70%;width: 90%;margin-top: 6vw;" class="son box6 tip-css"  >
-					您当前区域暂未部署悠悦易存产品或由于您未选择您的高校系统无法判断您的区域是否部署悠悦易存产品，您暂时无法使用平台交易。
+				<div class="shadow" style="border-radius: 2.25rem;height: 70vw;margin-top: 3vw;padding:2vw;padding-left: 5vw;padding-right: 5vw;"
+				 align="center">
+					<input type="text" class="index-zhe shadow" style="margin-left: 0vw;padding-left: 2vw;font-size: 3vw;border-style: none;height: auto;width:100%;"
+					 name="itemName" placeholder="物品名称" />
+					<textarea name="itemParameter" class="index-zhe shadow box6" style="margin-left: 0vw;margin-top: 3vw; padding-top: 1vw;
+					  padding-left: 3vw;padding-right: 3vw; font-size: 3vw;border-style: none;height: 30vw;width:100%;"
+					 placeholder="在此输入您的产品描述/参数"></textarea>
+				</div>
+				<div>
+
+				</div>
+				<div></div>
+
+			</div>
+			<div class="father" style="z-index: 9999;display: none;" id="instruction-second">
+				<div style="background: white;" class="son float-instruction shadow-irreguler">
+					<div style="width: 100%;height: 0 auto; background-color: var(--fColor);">
+						<div class="container-fluid" style="padding: 0rem;">
+							<div class="row" style="padding: 0rem;margin: 0;">
+								<div class="col-10" align="center" style="padding:0rem;color: white;font-weight: bold;font-size: 4vw;">
+									为什么无法选择？
+								</div>
+								<div class="col-2" align="right" style="padding-right: 3vw">
+									<svg class="icon" aria-hidden="true" style="font-size: 6vw;color: white;" onclick="close_instruction('instruction-second')">
+										<use xlink:href="#icon-guanbi"></use>
+									</svg>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div style="height: 70%;width: 90%;margin-top: 6vw;" class="son box6 tip-css">
+						您当前区域暂未部署悠悦易存产品或由于您未选择您的高校系统无法判断您的区域是否部署悠悦易存产品，您暂时无法使用平台交易。
+					</div>
 				</div>
 			</div>
-		</div>
+			<!-- 控制多选框 -->
+			<script>
+				CSS.paintWorklet.addModule('asserts/js/Checkbox.js')
+				CSS.registerProperty({
+					name: "--bg-color",
+					syntax: "<color>",
+					initialValue: "#fff"
+				});
+				CSS.registerProperty({
+					name: "--border-color",
+					syntax: "<color>",
+					initialValue: "#fff"
+				});
+				CSS.registerProperty({
+					name: "--line-color",
+					syntax: "<color>",
+					initialValue: "#fff"
+				});
+				const changeIndeterminate = document.querySelector('#changeIndeterminate')
+				const checkbox = document.querySelectorAll('.custom-checkbox')[0]
+				const checkbox1 = document.querySelectorAll('.custom-checkbox')[1]
+				checkbox.indeterminate = true
+				checkbox1.indeterminate = true
+				changeIndeterminate.addEventListener('click', () => {
+					checkbox.indeterminate = !checkbox.indeterminate
+					checkbox1.indeterminate = !checkbox1.indeterminate
+				})
+			</script>
 	</body>
 </html>
