--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 			</div>
 		</div>
 		<!-- 浮动说明 -->
-		<div class="father" style="z-index: 9999;" id="instruction-first" >
+		<div class="father" style="z-index: 9999;display: none;" id="instruction-first" >
 			<div style="width: 50%;height: 50%;background: white;" class="son float-instruction shadow-irreguler">
 				<div style="width: 100%;height: 0 auto; background-color: var(--fColor);">
 					<div class="container-fluid" style="padding: 0rem;">
