--- a/search.html
+++ b/search.html
@@ -87,12 +87,42 @@
 			</tr>
 
 		</table>
+		<div class="footer-bot">
+			<div class="container-fluid" >
+				<div class="row" >
+					<div class="col-2"  align="center" id="home" onclick="">
+						<svg class="icon" aria-hidden="true" style="font-size: 9vw;margin-top: 2vw;color: black;">							
+						<use xlink:href="#icon-zhuye"></use>
+						</svg><!-- <a style="color: var(--fColor);font-size: 2vw;margin-bottom: 1vw">主页</a> -->
+					</div>
+					<div class="col-2" align="center" id="search" onclick="">
+						<svg class="icon" aria-hidden="true" style="font-size: 9vw;margin-top:2vw;">
+							<use xlink:href="#icon-sousuo"></use>
+						</svg><!-- <a style="color: var(--fColor);font-size: 2vw;margin-bottom: 1vw">搜索</a> -->
+					</div>
+					<div class="col-4"></div>
+					<div style="height:12vw;position: fixed;width: 100%; bottom:6vw;justify-content: center;" align="center" id="publish" onclick="">
+						<svg class="icon" aria-hidden="true" style="font-size: 18vw;">
+							<use xlink:href="#icon-xinzeng"></use>
+						</svg>
+					</div>
+					<div class="col-2"  align="center" id="message" onclick="">
+						<svg class="icon" aria-hidden="true" style="font-size: 9vw;margin-top:2vw;">
+							<use xlink:href="#icon-xiaoxi"></use>
+						</svg><!-- <a style="color: var(--fColor);font-size: 2vw;margin-bottom: 1vw">消息</a> -->
+					</div>
+					<div class="col-2" align="center" id="mine" onclick="">
+						<svg class="icon" aria-hidden="true" style="font-size: 9vw;margin-top:2vw;">
+							<use xlink:href="#icon-wode"></use>
+						</svg><!-- <a style="color: var(--fColor);font-size: 2vw;margin-bottom: 1vw">我的</a> -->
+					</div>
+				</div>
+			</div>
+		</div>
 
 
 
 
-
-		<!-- 底面 from张哲-->
 
 
 	</body>
